Allways show y-scrolls. Fix .card a margin color. Add text-only card style. FIx footer alignment. Add 404 page Add search page. Add mobile navigation bar. Add loaders. Experimental: parallax max width. Experimental: Navigation bar underline.

--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -95,3 +95,17 @@ $nav-link-disabled-color:       map-get($theme-colors, light);
 
 //$nav-pills-link-active-color: map-get($theme-colors, info) ;
 //$nav-pills-link-active-bg:  white;
+
+//$modal-transition: transform 0.5s ease-out;
+//$modal-transition: transform 0.6s ease;
+//$modal-transition: transform 5s ease-out;
+
+//$transition-fade: opacity 5s linear;
+
+$body-background-color: rgb(222,222,222);
+$grid-background-color: rgb(245,245,245);
+$grid-textCard-background-color: white;
+$navbar-text-color: rgb(151,151,151);
+//$navbar-text-color: rgba(0,0,0,0.5);
+
+
